@@ -1,3 +1,7 @@
+2003-05-04  Mark Kettenis  <kettenis@gnu.org>
+
+	* i386-linux-nat.c (supply_gregset): Remove unnecessary casts.
+
 2003-05-03  J. Brobecker  <brobecker@gnat.com>
 
 	From Thierry Schneider <tpschneider1@yahoo.com>
